@@ -79,9 +79,6 @@ import org.glassfish.hk2.api.ServiceLocator;
 import org.glassfish.internal.api.Globals;
 import org.glassfish.security.common.Role;
 
-import com.google.common.base.Function;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableSet;
 import com.sun.enterprise.deployment.node.ApplicationNode;
 import com.sun.enterprise.deployment.runtime.application.wls.ApplicationParam;
 import com.sun.enterprise.deployment.runtime.common.SecurityRoleMapping;
@@ -98,6 +95,8 @@ import com.sun.enterprise.deployment.util.ComponentVisitor;
 import com.sun.enterprise.deployment.util.DOLUtils;
 import com.sun.enterprise.util.LocalStringManagerImpl;
 import com.sun.enterprise.util.StringUtils;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 /**
  * Objects of this type encapsulate the data and behaviour of a J2EE
@@ -796,8 +795,7 @@ public class Application extends CommonResourceBundleDescriptor
     }
 
     public void addScanningInclusions(List<String> inclusions, String libDir) {
-        this.scanningInclusions.addAll(FluentIterable.from(inclusions)
-                .transform(new WildcardToRegex(libDir)).toList());
+        this.scanningInclusions.addAll(inclusions.stream().map(new WildcardToRegex(libDir)).collect(Collectors.toList()));
     }
 
     public void addScanningExclusions(List<String> exclusions) {
@@ -805,8 +803,7 @@ public class Application extends CommonResourceBundleDescriptor
     }
 
     public void addScanningExclusions(List<String> exclusions, String libDir) {
-        this.scanningExclusions.addAll(FluentIterable.from(exclusions)
-                .transform(new WildcardToRegex(libDir)).toList());
+        this.scanningExclusions.addAll(exclusions.stream().map(new WildcardToRegex(libDir)).collect(Collectors.toList()));
     }
 
     public boolean isWhitelistEnabled() {
@@ -814,7 +811,7 @@ public class Application extends CommonResourceBundleDescriptor
     }
 
     public Set<String> getWhitelistPackages() {
-        return ImmutableSet.copyOf(whitelistPackages);
+        return Collections.unmodifiableSet(whitelistPackages);
     }
 
     public void addWhitelistPackage(String aPackage) {
